force-app/main/default/objects/PingFederateAuthConfig__mdt/PingFederateAuthConfig__mdt.object-meta.xml
<CustomObject>
    <description>Configuração do Auth Provider customizado Ping Federate com header app-key</description>
    <label>Ping Federate Auth Config</label>
    <pluralLabel>Ping Federate Auth Configs</pluralLabel>
</CustomObject>