force-app/main/default/objects/PingFederateAuthConfig__mdt/fields/App_Key__c.field-meta.xml
<CustomField>
    <fullName>App_Key__c</fullName>
    <description>Valor do header customizado app-key enviado ao token endpoint</description>
    <label>App Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>