force-app/main/default/objects/PingFederateAuthConfig__mdt/fields/Authorize_URL__c.field-meta.xml
<CustomField>
    <fullName>Authorize_URL__c</fullName>
    <description>URL do Authorize Endpoint OAuth</description>
    <label>Authorize URL</label>
    <required>true</required>
    <type>Url</type>
</CustomField>