force-app/main/default/objects/PingFederateAuthConfig__mdt/fields/Provider__c.field-meta.xml
<CustomField>
    <fullName>Provider__c</fullName>
    <description>Developer Name do Auth Provider (ex: Ping_Federate_POC)</description>
    <label>Provider</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>