force-app/main/default/objects/PingFederateAuthConfig__mdt/fields/Token_URL__c.field-meta.xml
<CustomField>
    <fullName>Token_URL__c</fullName>
    <description>URL do Token Endpoint OAuth</description>
    <label>Token URL</label>
    <required>true</required>
    <type>Url</type>
</CustomField>