force-app/main/default/objects/PingFederateAuthConfig__mdt/fields/User_Info_URL__c.field-meta.xml
<CustomField>
    <fullName>User_Info_URL__c</fullName>
    <description>URL do UserInfo endpoint OIDC (opcional)</description>
    <label>User Info URL</label>
    <type>Url</type>
</CustomField>